infrastructure/kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kubeflow
  name: kubeflow
spec:
  selector:
    matchLabels:
      app: kubeflow
  template:
    metadata:
      labels:
        app: kubeflow
    spec:
      containers:
        - image: ghcr.io/enricopesce/kubeflow-app
          name: app
          ports:
            - containerPort: 9000
              name: fcgi
          volumeMounts:
            - mountPath: /usr/local/etc/php-fpm.conf
              name: php-volume
              readOnly: true
              subPath: php-fpm.conf
            - mountPath: /usr/local/etc/php/php.ini
              name: php-volume
              readOnly: true
              subPath: php.ini
          resources:
            limits:
              cpu: "0.5"
            requests:
              cpu: "0.5"
        - image: ghcr.io/enricopesce/kubeflow-web
          name: web
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - mountPath: /etc/nginx/nginx.conf
              name: nginx-volume
              readOnly: true
              subPath: nginx.conf
            - mountPath: /etc/nginx/virtualhost.conf
              name: nginx-volume
              readOnly: true
              subPath: virtualhost.conf
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            timeoutSeconds: 5
          resources:
            limits:
              cpu: "0.5"
            requests:
              cpu: "0.5"
      volumes:
        - configMap:
            name: nginx-conf
          name: nginx-volume
        - configMap:
            name: php-conf
          name: php-volume
