infrastructure/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubeflow
spec:
  type: NodePort
  selector:
    app: kubeflow
  ports:
    - port: 80
      targetPort: 80
